<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp"
    android:background="@android:color/background_light">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Интерстеллар"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/primary_text_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDirectorTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/director_"
            android:textSize="14sp"
            android:textColor="@android:color/secondary_text_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <TextView
            android:id="@+id/tvDirector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@android:color/secondary_text_light"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@id/tvDirectorTitle"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <TextView
            android:id="@+id/tvYearTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/year"
            android:textColor="@android:color/secondary_text_light"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDirector" />

        <TextView
            android:id="@+id/tvYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@android:color/secondary_text_light"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@id/tvYearTitle"
            app:layout_constraintTop_toBottomOf="@id/tvDirector" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@android:color/primary_text_light"
            android:maxLines="3"
            android:ellipsize="end"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/shareBtn"
            app:layout_constraintTop_toBottomOf="@id/tvYear" />

        <TextView
            android:id="@+id/tvRatingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_green_light"
            android:layout_marginEnd="4dp"
            app:layout_constraintEnd_toStartOf="@id/tvRating"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="8.6"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/holo_green_light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/shareBtn"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_share"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>